--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
@@ -14,25 +16,25 @@
         </a>
 
         <ul>
-          <li><a href="#tradition-section">Наші традиції</a></li>
-          <li><a href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a href="#format-section">Формати</a></li>
-          <li><a href="#contacts-section">Контакти</a></li>
+          <li><a class="link" href="#tradition-section">Наші традиції</a></li>
+          <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#format-section">Формати</a></li>
+          <li><a class="link" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
-      <button type="submit">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
       <section>
-        <h1>Сучасна пекарня</h1>
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
       <section id="tradition-section">
-        <ul>
+        <ul class="advantages-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий фармат традиції</h2>
+        <h2 class="section-title">Новий фармат традиції</h2>
         <p>
           <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
           зберегла смак традиційної випічки та натуральність інгредієнтів.
@@ -48,7 +50,9 @@
         />
       </section>
       <section id="chefs-section">
-        <h2>Найкраші шеф кухарі</h2>
+        <h2 class="section-title">
+          Наші найкращі<span class="accent"> Шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
@@ -72,7 +76,7 @@
         </ul>
       </section>
       <section id="format-section">
-        <h2>Формати</h2>
+        <h2 class="section-title">Формати</h2>
         <ul>
           <li>
             <article>
@@ -92,7 +96,7 @@
         </ul>
       </section>
       <section id="contacts-section">
-        <h2>Приєднуйтесь до мержі пекарень</h2>
+        <h2 class="section-title">Приєднуйтесь до мержі пекарень</h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.163447036114!2d30.488698376098355!3d50.45668098691574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1732652095188!5m2!1suk!2sua"
           width="603"
